# learning_finance

./: README.md  pyproject.toml
learning/01/: MEMO.md  data_download.py  plot_test.py
