[tool.poetry]
name = "finance-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "finance_learning"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
pandas-datareader = "^0.10.0"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
